Fixed venmo qr on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,4 +151,14 @@ body {
         padding-top: 50px;
         padding-bottom: 50px;
     }
+    #venmo-img {
+        width: 100%;
+        height: auto;
+    }
+    .content-box.venmo {
+        width: 100%;
+    }
+    .content-container.venmo {
+        width: 100%;
+    }
 }
